[gd_scene load_steps=2 format=3 uid="uid://cwx47pwg7lwcg"]

[ext_resource type="Script" path="res://scripts/opt.gd" id="1_3bws6"]

[node name="MENU" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3bws6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -800.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.995154, 0.983813)

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "sensitivity"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="sensitivity_Slider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.05
max_value = 1.0
step = 0.05
value = 0.3

[node name="grass_move" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "no_grass_move"

[node name="grass_i" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "grass_interactive"

[node name="shadows" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
button_pressed = true
text = "shadows"

[connection signal="value_changed" from="VBoxContainer/sensitivity_Slider" to="." method="_on_sensitivity_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/grass_move" to="." method="_on_grass_move_toggled"]
[connection signal="toggled" from="VBoxContainer/grass_i" to="." method="_on_grass_i_toggled"]
[connection signal="toggled" from="VBoxContainer/shadows" to="." method="_on_shadows_toggled"]
